Fin seccion Carrito

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Pulguitas: Venta de insumos, alimentos, medicamentos y accesorios para mascotas. Encuentra todo lo que necesitas para el cuidado de tus amigos peludos." />
+    <meta name="keywords" content="Pulguitas, mascotas, insumos para mascotas, alimentos para mascotas, medicamentos para mascotas, accesorios para mascotas, tienda de mascotas" />
+    <meta name="author" content="Pulguitas" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Pulguitas - Todo para tus mascotas" />
+    <meta property="og:description" content="Encuentra insumos, alimentos, medicamentos y accesorios para tus mascotas en Pulguitas." />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="http://149.50.145.228/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Pulguitas - Todo para tus mascotas" />
+    <meta name="twitter:description" content="Descubre todo lo que necesitas para el cuidado y felicidad de tus mascotas en Pulguitas." />
+    <meta name="twitter:image" content="/logo.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <title>Pulguitas - Insumos y alimentos para mascotas</title>
   </head>
   <body>
     <div id="root"></div>
